--- a/qtpropertybrowser/CMakeLists.txt
+++ b/qtpropertybrowser/CMakeLists.txt
@@ -23,19 +23,44 @@ find_package(Qt${QT_VERSION_MAJOR} 6.6 REQUIRED COMPONENTS Widgets Core Gui Core
 file(GLOB_RECURSE ${PROJECT_NAME_UPPER}_H "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
 file(GLOB_RECURSE ${PROJECT_NAME_UPPER}_CPP "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
-add_library(qtpropertybrowser STATIC
+
+if(${CMAKE_GENERATOR} MATCHES "Visual Studio*")
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_lib/${CMAKE_SYSTEM_NAME})
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_lib/${CMAKE_SYSTEM_NAME})
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_bin/${CMAKE_SYSTEM_NAME})
+
+    set(EXACT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_bin/${CMAKE_SYSTEM_NAME})
+else()
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_lib/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE})
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_lib/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE})
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_bin/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE})
+
+    set(EXACT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME}_bin/${CMAKE_SYSTEM_NAME}/${CMAKE_BUILD_TYPE})
+endif()
+
+
+add_library(${PROJECT_NAME} STATIC
     ${${PROJECT_NAME_UPPER}_H}
     ${${PROJECT_NAME_UPPER}_CPP}
     src/qtpropertybrowser.qrc
 )
-target_include_directories(qtpropertybrowser PUBLIC
+target_include_directories(${PROJECT_NAME} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
-target_link_libraries(qtpropertybrowser PUBLIC
+target_link_libraries(${PROJECT_NAME} PUBLIC
     Qt6::Widgets
     Qt6::Core
     Qt6::Gui
     Qt6::Core5Compat
+)
+
+message(STATUS "***** CMAKE_LIBRARY_OUTPUT_DIRECTORY: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} *****")
+
+include(GNUInstallDirs)
+install(TARGETS ${PROJECT_NAME}
+    BUNDLE DESTINATION .
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 add_subdirectory(examples)
