--- a/qtpropertybrowser/examples/canvas_typed/CMakeLists.txt
+++ b/qtpropertybrowser/examples/canvas_typed/CMakeLists.txt
@@ -1,5 +1,4 @@
-# Created by Zhuoqun Chen
-# on 2022-07-25 Monday 07:51
+
 cmake_minimum_required(VERSION 3.14)
 
 project(canvas_typed
@@ -13,8 +12,6 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_PREFIX_PATH F:\\Qt\\6.2.4\\msvc2019_64)
-set(Qt6_DIR F:\\Qt\\6.2.4\\msvc2019_64\\lib\\cmake\\Qt6)
 find_package(Qt6 REQUIRED COMPONENTS 
     Widgets 
     Core 
@@ -31,12 +28,10 @@ add_executable(canvas_typed WIN32
 )
 target_include_directories(canvas_typed PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ../../.
+    ../../src
 )
 target_link_libraries(canvas_typed PRIVATE
-
     qtpropertybrowser
-
     Qt6::Widgets
     Qt6::Core
     Qt6::Gui
